将数据库更换为MySQL

--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -1,19 +1,19 @@
 {% extends "layout.html" %}
 {% block body %}
     {% if session.logged_in %}
-        <form action="{{ url_for('add_entry')}}" method=post class=add-entry>
+        <form action="{{ url_for('register')}}" method=post class=add-entry>
             <dl>
-                <dt>Title
-                <dd><input type="text" size==30 name=title>
-                <dt>Content
-                <dd><textarea name="content" cols="40" rows="5"></textarea>
-                <dd><input type="submit" value="share">
+                <dt>username
+                <dd><input type="text" size==30 name="user_name">
+                <dt>password
+                <dd><input type="password" size="30" name="user_password">
+                <dd><input type="submit" value="注册">
              </dl>
         </form>
     {% endif %}
     <ul class="entries">
     {% for entry in entries %}
-        <li><h2>{{ entry.title}}</h2>{{ entry.content|safe}}</li>
+        <li><h2>{{ entry.user_name}}</h2><h4>{{ entry.videotag|safe}}</h4><h4>{{entry.weight}}</h4></li>
     {% else %}
         <li><em>Unbelievable. No entries here so far</em></li>
     {% endfor %}
