--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -13,7 +13,7 @@
     {% endif %}
     <ul class="entries">
     {% for entry in entries %}
-        <li><h2>{{ entry.user_name}}</h2><h4>{{ entry.videotag|safe}}</h4><h4>{{entry.weight}}</h4></li>
+        <li><h2>{{ entry }}</h2></li>
     {% else %}
         <li><em>Unbelievable. No entries here so far</em></li>
     {% endfor %}
