--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,18 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-<title>Home</title>
+<title>Bilibili RS</title>
 <!-- Custom Theme files -->
     <script src="../static/bootstrap/js/jquery-3.2.1.min.js"></script>
     <script src="../static/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/bootstrap/font-awesome-4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" href="../static/loginstyle.css">
 <!-- Custom Theme files -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<!--Google Fonts-->
+    <!--Google Fonts-->
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header well" id="header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-power-off"></i></button>
                     <h4 class="modal-title text-center" id="title1">注 册</h4>
                 </div>
                 <div class="modal-body">
@@ -61,7 +62,7 @@
 
 
 <div class="copyright">
-	<p>Copyright &copy; 2017.香香鸡有限责任公司 All rights reserved.<a target="_blank"
+    <p>Copyright &copy; 2017.香香鸡有限责任公司 All rights reserved.</p>
 </div>
 
 
