--- a/templates/UserPage.html
+++ b/templates/UserPage.html
@@ -41,7 +41,7 @@
                         </li>
                     </div>
                     <li class="list-group-item">
-                        <a href="#"><button class="btn btn-block btn-primary"><h4 class="text-center">用户信息</h4></button></a>
+                        <a href="{{ url_for('show_entries') }}"><button class="btn btn-block btn-primary"><h4 class="text-center">用户信息</h4></button></a>
                     </li>
                     <li class="list-group-item">
                         <a href="#"><button class="btn btn-block btn-primary"><h4 class="text-center">视频推荐</h4></button></a>
