--- a/templates/RecommandPage.html
+++ b/templates/RecommandPage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Bilibili RS——RecommandPage</title>
     <script src="../static/bootstrap/js/jquery-3.2.1.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+    <script src="../static/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" href="../static/bootstrap/font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="../static/UserPage.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -59,7 +59,7 @@
                     <thead>
                     <tr class="well">
                         <th>标题</th>
-                        <th>URL</th>
+                        <th>简介</th>
                         <th>匹配度</th>
                     </tr>
                     </thead>
@@ -67,9 +67,9 @@
                     {% if data %}
                         {% for i in data %}
                     <tr>
-                        <td>{{ i[0] }}</td>
-                        <td><a href="{{ i[1] }}" target="_blank">{{ i[1] }}</a></td>
-                        <td>{{ i[2] }}</td>
+                        <td><a href="{{ i[1] }}" aid="{{ i[2] }}" class="video" target="_blank">{{ i[0] }}</a></td>
+                        <td>{{ i[3] }}</td>
+                        <td>{{ i[4] }}</td>
                     </tr>
                         {% endfor %}
                     {% else %}
@@ -124,3 +124,13 @@
 </div>
 </body>
 </html>
+
+<script>
+    $(document).ready(function () {
+        $(".video").click(function () {
+            $.ajax({url:"/updateUserPref/",data:{"aid":this.getAttribute('aid')},success:function (data) {
+                alert(data);
+            }});
+        });
+    });
+</script>
