--- a/templates/UserPage.html
+++ b/templates/UserPage.html
@@ -65,10 +65,12 @@
                         <tbody>
                         {% if pref %}
                             {% for i in pref%}
+                                {% if i[1] > 1 %}
                         <tr>
                             <td>{{ i[0] }}</td>
                             <td>{{ i[1] }}</td>
                         </tr>
+                                {% endif %}
                             {% endfor %}
                         {% else %}
                         <tr>
