对静态页面进行了优化，增加了注册表单的格式验证

--- a/templates/UserPage.html
+++ b/templates/UserPage.html
@@ -44,7 +44,7 @@
                         <a href="{{ url_for('show_entries') }}"><button class="btn btn-block btn-primary"><h4 class="text-center">用户信息</h4></button></a>
                     </li>
                     <li class="list-group-item">
-                        <a href="{{ url_for('recommand') }}"><button class="btn btn-block btn-primary"><h4 class="text-center">视频推荐</h4></button></a>
+                        <a href="{{ url_for('recommand') }}"><button class="btn btn-block btn-primary" id="recommand"><h4 class="text-center">视频推荐</h4></button></a>
                     </li>
                 </ul>
             </div>
